Update documentation (README and tex files)

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -52,8 +52,8 @@
 \captionsetup[lstlisting]{format=listing,labelfont=white,textfont=white, singlelinecheck=false, margin=0pt, font={bf,footnotesize}}
 
 \title{LodPaddle et OpenDataWrapper - HOW TO}
-\author{Sébastien CHENAIS}
-\date{juin 2013}
+\author{M1ATAL-M1ALMA 2013-2014}
+\date{octobre 2013}
 
 \begin{document}
 \maketitle
@@ -247,7 +247,7 @@ faire, créez un fichier nommé \textbf{import.odw} à la racine de votre compte
 personel (\$home). Dans ce fichier la syntaxe d'ajout est la suivante: 
 
 \begin{lstlisting}[caption=syntaxe import.odw, language=XML]
-nom_du_dataset = http://url_de_l_api.com
+nom_du_dataset = http://url_de_l_api.com;http://desc_de_l_api.com;Titre_de_l_api;Publisher_de_l_api
 \end{lstlisting}
 
 Les restrictions liées à cette fonction sont les suivantes:
